# SkyrimSE-FloatingDamageSKSE

./: CMakeLists.txt  CMakePresets.json  FloatingDamageSKSE.ini  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
Interface/: FloatingDamageV2.swf  TrueHUD_Assets0.swf  TrueHUD_Assets1.swf  TrueHUD_Assets2.swf  TrueHUD_Widgets.swf
src/: FloatingDamageManager.cpp  FloatingDamageManager.h  Hooks.cpp  Hooks.h  Menu.cpp  Menu.h  Offsets.h  PCH.h  SKSEMenuFramework.h  Settings.cpp  Settings.h  logger.h  main.cpp
src/Scaleform/: FloatingDamageMenu.cpp  FloatingDamageMenu.h  Scaleform.cpp  Scaleform.h
